--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,7 +3,7 @@ RUN apk update && \
 	apk add --no-cache \
     nginx \
     openssl
-EXPOSE 443
+EXPOSE 8080
 
 RUN mkdir -p /run/nginx /etc/nginx/ssl
 
@@ -13,10 +13,10 @@ RUN openssl req -newkey rsa:2048 -x509 -sha256 -days 365 -nodes \
     -subj "/C=FI/ST=Helsinki/L=Helsinki/O=Hive/OU=asarikha/CN=asarikha.42.fr"
 
 COPY tools /usr/share/nginx/html
-# COPY conf/nginx.conf /etc/nginx/nginx.conf
+COPY ./conf/default.conf /etc/nginx/http.d/default.conf
 
-# CMD ["nginx", "-c", "/etc/nginx/nginx.conf", "-g", "daemon off;"]
+#CMD ["nginx", "-c", "/etc/nginx/wwww.conf", "-g", "daemon off;"]
 CMD ["nginx", "-g", "daemon off;"]
 
-## Docker build -t first-image .
-## docker run -d --name first-container -p 8080:443 first-image
+## docker build -t first-image .
+## docker run -d --name first-container -p 8080:80 first-image
