--- a/compose.yml
+++ b/compose.yml
@@ -1,4 +1,8 @@
 services:
   nginx:
     ports:
-      - "443:443"
+      - "8080:443"
+    image: nginx
+    container_name: nginx_c
+    build: ./srcs/requirements/nginx
+    restart: always
