--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,20 +1,19 @@
-http {
-    include mime.types;
-    server {
-        listen 80;
-        return 444;
-    }
-    server {
-        listen 443 ssl; #IPv4
-        listen [::]:443 ssl; #IPv6
-        server_name asarikha.42.fr;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/nginx/ssl/certificate.crt;
-        ssl_certificate_key /etc/nginx/ssl/certificate.key;
+#reject connections requesting for plain http
+server {
+    listen 80;
+    return 444;
+}
 
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-        }
+server {
+    listen 443 ssl; #IPv4
+    listen [::]:443 ssl; #IPv6
+    server_name localhost;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_certificate /etc/nginx/ssl/certificate.crt;
+    ssl_certificate_key /etc/nginx/ssl/certificate.key;
+
+    location / {
+        root /usr/share/nginx/html;
+        index index.html;
     }
 }
