--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,3 +1,8 @@
-[client]
-user=mysqluser
-password=mysqlpass
+[mysqld]
+user = mysql
+bind-address=0.0.0.0
+basedir = /usr
+datadir = /var/lib/mysql
+lc-messages-dir = /usr/share/mysql
+skip-networking = false
+query_cache_size = 32M
