--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ services:
   nginx:
     ports:
       - "8080:443"
-    image: nginx-img
+    image: nginx
     container_name: nginx_c
     build: ./srcs/requirements/nginx
     restart: always
   mariadb:
-    image: mariadb-img
+    image: mariadb
     container_name: mariadb_c
     build: ./srcs/requirements/mariadb
     restart: always
