--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,9 +8,10 @@ RUN apk update && \
 EXPOSE 3306
 
 COPY ./conf/my.cnf /etc/my.cnf.d/my.cnf
-COPY tools/script.sh ./script.sh
+COPY tools/script.sh /tmp/mariadb-setup.sh
+RUN chmod +x /tmp/mariadb-setup.sh
 
-RUN sh ./script.sh
-CMD ["mysqld_safe", "--defaults-file=/etc/my.cnf.d/my.cnf"]
+CMD ["sh",  "/tmp/mariadb-setup.sh"] 
+# CMD ["mysqld_safe", "--defaults-file=/etc/my.cnf.d/my.cnf"]
 ## docker build -t db-image .
 ## docker run  --name db-container -p 8080:3306 --rm db-image
