--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -14,6 +14,14 @@ server {
 
     location / {
         root /usr/share/nginx/html;
-        index index.html;
+        index /var/www/html/;
+    }
+
+    location ~ \.php$ {
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_pass wordpress_c:9000;
+    fastcgi_split_path_info ^(.+\.php)(/.*)$;
+    fastcgi_index index.php;
     }
 }
