--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -7,7 +7,7 @@ server {
 server {
     listen 443 ssl; #IPv4
     listen [::]:443 ssl; #IPv6
-    server_name localhost;
+    server_name asarikha.42.fr;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_certificate /etc/nginx/ssl/certificate.crt;
     ssl_certificate_key /etc/nginx/ssl/certificate.key;
