switch the used and group name to www

--- a/srcs/requirements/nginx/conf/default.conf
+++ b/srcs/requirements/nginx/conf/default.conf
@@ -1,43 +1,27 @@
-user www-data;
-worker_processes auto; # Let nginx handle cpu cores
-pid /run/nginx/nginx.pid; # Define where to store pid file
+# /etc/nginx/conf.d/default.conf
 
-events {
-    worker_connections 1024; # Max num of connections per worker process
-}
-http {
-    # File type mapping by extension, helps nginx to classify content being served
-    include mime.types;
-    default_type application/octet-stream;
-   server {
-        listen 80;
-        return 444;
-    }    #reject connections requesting for plain http
+server {
+	listen 443 ssl; #IPv4
+	listen [::]:443 ssl; #IPv6
+	server_name asarikha.42.fr;
+	ssl_protocols TLSv1.2 TLSv1.3;
+	ssl_certificate /etc/nginx/ssl/certificate.crt;
+	ssl_certificate_key /etc/nginx/ssl/certificate.key;
 
+	# Root dir for serving files
+	root /var/www/html;
+	# Default files to serve
+	index index.php index.html index.htm;
+	
+	location / {
+			try_files $uri $uri/ /index.php?$args;
+	}
 
-    server {
-        listen 443 ssl; #IPv4
-        listen [::]:443 ssl; #IPv6
-        server_name asarikha.42.fr;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_certificate /etc/nginx/ssl/certificate.crt;
-        ssl_certificate_key /etc/nginx/ssl/certificate.key;
-
-        # Root dir for serving files
-        root /var/www/html/wordpress;
-        # Default files to serve
-        index index.php index.html index.hml;
-        
-        location / {
-                try_files $uri $uri/ /index.php?$args;
-        }
-
-        location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_pass wordpress:9000;
-            fastcgi_split_path_info ^(.+\.php)(/.*)$;
-            fastcgi_index index.php;
-        }
-    }
+	location ~ \.php$ {
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_pass wordpress:9000;
+		fastcgi_split_path_info ^(.+\.php)(/.*)$;
+		fastcgi_index index.php;
+	}
 }
