--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -6,3 +6,5 @@ datadir = /var/lib/mysql
 lc-messages-dir = /usr/share/mysql
 skip-networking = false
 query_cache_size = 32M
+console	= true
+log_error=/var/log/mysql/error.err
