--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,6 +4,7 @@ RUN apk update && \
 	apk add --no-cache \
     nginx \
     openssl
+
 EXPOSE 443
 
 RUN mkdir -p /run/nginx /etc/nginx/ssl
@@ -11,15 +12,15 @@ RUN mkdir -p /run/nginx /etc/nginx/ssl
 RUN openssl req -newkey rsa:2048 -x509 -sha256 -days 365 -nodes \
     -out /etc/nginx/ssl/certificate.crt \
     -keyout /etc/nginx/ssl/certificate.key \
-    -subj "/C=FI/ST=Helsinki/L=Helsinki/O=Hive/OU=asarikha/CN=asarikha.42.fr" 
-    
-RUN adduser -D -H -s /sbin/nologin -g www-data -G www-data www-data
+    -subj "/C=FI/ST=Helsinki/L=Helsinki/O=Hive/OU=asarikha/CN=asarikha.42.fr"
 
-COPY tools /usr/share/nginx/html
-COPY ./conf/default.conf /etc/nginx/nginx.conf
+RUN addgroup -S www && \
+	adduser -S -H -g "" www -G www
 
+COPY ./conf/default.conf /etc/nginx/http.d/default.conf
+
+RUN sed -i 's/user nginx/user www www/' /etc/nginx/nginx.conf && \
+	sed -i 's/ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;/ssl_protocols TLSv1.2 TLSv1.3;/' nginx.conf
 
 CMD ["nginx", "-g", "daemon off;"]
 
-## docker build -t first-image .
-## docker run  --name db-container -p 8080:443 --rm db-image
